@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-26-2005 patrickh    gadget::MouseEvent objects on Windows now have correct
+                        key press state information.
+                        Submitted by: Juan Hernando
+                        NEW VERSION: 1.1.5
 Aug-24-2005 patrickh    Updated to VPR 1.1.7.
                         NEW VERSION: 1.1.4
 Jul-11-2005 patrickh    Removed the methods gadget::Proxy::isStupified() and
